k8s/base/diagnostics-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagnostics-api
spec:
  selector:
    app: diagnostics-api
  ports:
    - port: 8080
      targetPort: 8080
