k8s/base/diagnostics-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: diagnostics-ui
spec:
  selector:
    app: diagnostics-ui
  ports:
    - port: 8501
      targetPort: 8501
