k8s/base/mock-enterprise-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mock-enterprise
spec:
  selector:
    app: mock-enterprise
  ports:
    - port: 8090
      targetPort: 8090
